<resources>
    <string name="app_name">JokbalManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_arrow">←</string>
    <string name="right_arrow">→</string>
    <string name="day_format">%d월 %d일</string>
    <string name="front_leg">앞발</string>
    <string name="back_leg">뒷발</string>
    <string name="mix_leg">혼합</string>
    <string name="zero_balance">0원</string>
    <string name="zero_weight">0kg</string>
    <string name="add_order_text">추가하기</string>
    <string name="date">날짜</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="weight">중량</string>
    <string name="kg">kg</string>
    <string name="price">단가</string>
    <string name="won_kg">원/kg</string>
    <string name="total_price">금액</string>
    <string name="deposit">입금</string>
    <string name="won">원</string>
    <string name="balance">차액</string>
    <string name="zero">0</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="order_info">주문 정보</string>
    <string name="delete">삭제</string>
    <string name="ok">확인</string>
    <string name="fix">수정</string>
    <string name="save">저장</string>
    <string name="total">합계</string>
</resources>