<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_gray"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_order_text"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="@dimen/add_order_title"
            android:textStyle="bold" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/type_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title_layout">

        <RadioButton
            android:id="@+id/front_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/front_leg"
            android:textSize="@dimen/add_order_text_size" />

        <RadioButton
            android:id="@+id/back_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_leg"
            android:textSize="@dimen/add_order_text_size" />

        <RadioButton
            android:id="@+id/mix_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mix_leg"
            android:textSize="@dimen/add_order_text_size" />
    </RadioGroup>

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="@dimen/add_order_text_size"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_rg" />

    <TextView
        android:id="@+id/pick_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_border"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/date_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/date_tv"
        tools:text="2021년 2월 14일" />

    <TextView
        android:id="@+id/weight_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintStart_toStartOf="@id/date_tv"
        app:layout_constraintTop_toBottomOf="@id/date_tv" />

    <EditText
        android:id="@+id/weight_et"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_border"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/weight_tv"
        app:layout_constraintEnd_toStartOf="@id/kg_tv"
        app:layout_constraintTop_toTopOf="@id/weight_tv"
        tools:text="1.9" />

    <TextView
        android:id="@+id/kg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/kg"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/weight_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/weight_tv" />

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintStart_toStartOf="@id/weight_tv"
        app:layout_constraintTop_toBottomOf="@id/weight_tv" />

    <EditText
        android:id="@+id/price_et"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_border"
        android:gravity="end"
        android:inputType="number"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/price_tv"
        app:layout_constraintEnd_toStartOf="@id/per_tv"
        app:layout_constraintTop_toTopOf="@id/price_tv"
        tools:text="10000" />

    <TextView
        android:id="@+id/per_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/won_kg"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/price_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_tv" />

    <TextView
        android:id="@+id/price_ttitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_price"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintStart_toStartOf="@id/price_tv"
        app:layout_constraintTop_toBottomOf="@id/price_tv" />

    <TextView
        android:id="@+id/total_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/price_ttitle_tv"
        app:layout_constraintEnd_toStartOf="@id/won_tv2"
        app:layout_constraintTop_toTopOf="@id/price_ttitle_tv" />

    <TextView
        android:id="@+id/won_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/won"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/price_ttitle_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_ttitle_tv" />

    <TextView
        android:id="@+id/deposit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/deposit"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintStart_toStartOf="@id/price_ttitle_tv"
        app:layout_constraintTop_toBottomOf="@id/price_ttitle_tv" />

    <EditText
        android:id="@+id/deposit_et"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_border"
        android:gravity="end"
        android:inputType="number"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/deposit_tv"
        app:layout_constraintEnd_toStartOf="@id/won_tv"
        app:layout_constraintTop_toTopOf="@id/deposit_tv"
        tools:text="12000" />

    <TextView
        android:id="@+id/won_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/won"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/deposit_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/deposit_tv" />

    <TextView
        android:id="@+id/balance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/balance"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintStart_toStartOf="@id/deposit_tv"
        app:layout_constraintTop_toBottomOf="@id/deposit_tv" />

    <TextView
        android:id="@+id/total_balance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/balance_tv"
        app:layout_constraintEnd_toStartOf="@id/won_tv3"
        app:layout_constraintTop_toTopOf="@id/balance_tv"
        tools:text="-2000" />

    <TextView
        android:id="@+id/won_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/won"
        android:textSize="@dimen/add_order_text_size"
        app:layout_constraintBottom_toBottomOf="@id/balance_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/balance_tv" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textSize="@dimen/detail_order_button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_tv" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        android:textSize="@dimen/detail_order_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>