<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TotalFragment">

    <LinearLayout
        android:id="@+id/year_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/prev_year_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_horizontal"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:text="@string/left_arrow"
            android:textSize="@dimen/date_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/current_year_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_horizontal"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:layout_weight="1"
            android:textSize="@dimen/date_button_text_size"
            tools:text="2021" />

        <Button
            android:id="@+id/next_year_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_horizontal"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:text="@string/right_arrow"
            android:textSize="@dimen/date_button_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/total_year_data"
        layout="@layout/daily_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/year_button_layout">

        <TextView
            android:id="@+id/total_year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_horizontal"
            android:text="@string/total"
            android:textSize="@dimen/total_month_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_weight_tv"
            android:layout_width="@dimen/weight_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:gravity="center_horizontal"
            android:text="중량"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintBottom_toBottomOf="@id/total_year_tv"
            app:layout_constraintEnd_toStartOf="@id/total_price_tv"
            app:layout_constraintTop_toTopOf="@id/total_year_tv" />


        <TextView
            android:id="@+id/total_price_tv"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:gravity="center_horizontal"
            android:text="금액"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintBottom_toBottomOf="@id/total_year_tv"
            app:layout_constraintEnd_toStartOf="@id/balance_tv"
            app:layout_constraintTop_toTopOf="@id/total_year_tv" />

        <TextView
            android:id="@+id/balance_tv"
            android:layout_width="@dimen/balance_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:gravity="center_horizontal"
            android:text="잔고"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintBottom_toBottomOf="@id/total_year_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/total_year_tv" />

        <TextView
            android:id="@+id/total_year_weight_tv"
            android:layout_width="@dimen/weight_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:gravity="end"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintBottom_toBottomOf="@id/total_year_price_tv"
            app:layout_constraintEnd_toStartOf="@id/total_year_price_tv"
            app:layout_constraintTop_toTopOf="@id/total_year_price_tv"
            tools:text="326.25kg" />

        <TextView
            android:id="@+id/total_year_price_tv"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:gravity="end"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintBottom_toBottomOf="@id/total_year_balance_tv"
            app:layout_constraintEnd_toStartOf="@id/total_year_balance_tv"
            app:layout_constraintTop_toTopOf="@id/total_year_balance_tv"
            tools:text="10000000원" />

        <TextView
            android:id="@+id/total_year_balance_tv"
            android:layout_width="@dimen/balance_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            android:gravity="end"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_year_tv"
            tools:text="+1000000원" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/year_data_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_year_data"
        tools:itemCount="12"
        tools:layout_editor_absoluteX="6dp"
        tools:listitem="@layout/month_item" />
</androidx.constraintlayout.widget.ConstraintLayout>